--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "seed:products": "node database/seed-products.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
