--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "seed": "node database/seed.js",
-    "seed:products": "node database/seed-products.js"
+    "seed:products": "node database/seed-products.js",
+    "seed:variants": "node database/seed-variants.js",
+    "seed:images": "node database/seed-products-images.js",
+    "export:products": "node database/export-products.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -18,8 +20,10 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "google-auth-library": "^9.14.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^7.0.10",
+    "socket.io": "^4.7.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
