--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview --host 0.0.0.0 --port 5173"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "recharts": "^3.3.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
