Update: Cập nhật các tính năng mới và sửa lỗi
- Thêm Mailhog cho email service
- Cập nhật signup flow với auto-login
- Thêm TODO.md với danh sách yêu cầu đầy đủ
- Cập nhật UI colors theo Atlas theme
- Sửa các lỗi nhỏ và cải thiện UX
- Thêm các components mới: ProductReviews, VariantsModal
- Cập nhật authentication flow
- Cải thiện admin dashboard

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "seed:products": "node database/seed-products.js",
-    "seed:variants": "node database/seed-variants.js",
-    "seed:images": "node database/seed-products-images.js",
-    "export:products": "node database/export-products.js"
+    "seed": "node database/seed.js all",
+    "seed:products": "node database/seed.js products",
+    "seed:images": "node database/seed.js images",
+    "seed:variants": "node database/seed.js variants",
+    "export:products": "node database/export-products.js",
+    "import:products": "node database/import-products.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
