--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,11 +35,20 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin123
+      MONGO_INITDB_ROOT_USERNAME: vinhtrong04
+      MONGO_INITDB_ROOT_PASSWORD: Vinh1204
       MONGO_INITDB_DATABASE: ecommerce
     volumes:
       - mongodb_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "1025:1025"  # SMTP server
+      - "8025:8025"  # Web UI
+    networks:
+      - default
 
 volumes:
   mongodb_data:
