feat: Final release - Complete e-commerce platform with all features
Features:
- VNPAY payment integration (COD & VNPAY)
- Swagger/OpenAPI documentation
- Horizontal scaling with Nginx load balancer
- Categories and Tags filtering
- Listview/Gridview toggle
- Real-time updates with WebSocket
- Admin dashboard with analytics
- Loyalty program (earn & redeem points)
- Guest checkout with auto account creation
- Order management with status tracking
- Email notifications
- Responsive design with Tailwind CSS

Technical improvements:
- Stateless architecture (JWT tokens)
- Nginx load balancing support
- Docker Compose deployment
- API documentation with Swagger UI
- Enhanced error handling
- Cart management fixes
- Order history improvements

Files:
- Added: Swagger documentation, VNPAY integration, Nginx config
- Updated: All core features, UI/UX improvements
- Removed: Backup files, unnecessary scripts

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ Thumbs.db
 # Docker
 *.log
 
+# Documentation files (keep in repo)
+# TODO.md - Project documentation
+# FIX_SCALE_ERROR.md - Can be removed if not needed
