--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "seed:images": "node database/seed.js images",
     "seed:variants": "node database/seed.js variants",
     "export:products": "node database/export-products.js",
-    "import:products": "node database/import-products.js"
+    "import:products": "node database/import-products.js",
+    "create-admin": "node create-admin.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -21,11 +22,14 @@
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "google-auth-library": "^9.14.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^7.0.10",
+    "qs": "^6.14.0",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
