feat: Improve responsive design and fix Filters sidebar display
- Add mobile menu (hamburger) for header navigation
- Add mobile sidebar menu for AdminLayout with overlay
- Improve ProductCard list view responsive layout
- Fix Filters sidebar: always visible on desktop, collapsible on mobile
- Improve responsive spacing and layout for HomePage, ProductDetail, CheckoutPage, CartPage
- Expose port 5173 in docker-compose.yml for direct frontend access
- Update footer and newsletter section responsive design

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,9 @@
 
   web:
     build: ./frontend
-    # Remove direct port exposure when using nginx
-    # ports:
-    #   - "5173:5173"
+    # Direct access for development (uncomment for direct access)
+    ports:
+      - "5173:5173"
     volumes:
       - ./frontend/src:/app/src
     environment:
