--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,6 @@ Thumbs.db
 # Docker
 *.log
 
-# Documentation files (keep in repo)
-# TODO.md - Project documentation
-# FIX_SCALE_ERROR.md - Can be removed if not needed
+# Local documentation (not tracked)
+TODO.md 
+
