--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,10 @@
     build:
       context: ./backend
       dockerfile: Dockerfile
-    # Remove port exposure when scaling (Nginx will route traffic internally)
-    # ports:
-    #   - "4000:4000"
+    ports:
+      - "4000:4000"   # ← thêm lại để NGINX mới route được
     env_file: ./backend/.env
     environment:
-      - GOOGLE_CLIENT_ID=477491683221-coa8dm509q3o13na4t1mamk1b0dls1se.apps.googleusercontent.com
-      - VNP_TMN_CODE=WVPILPKE
-      - VNP_HASH_SECRET=406I8J10RA2FVTKC0J3JPC3AA0023FNE
-      - VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-      - VNP_RETURN_URL=http://localhost/api/payment/vnpay/return
-      - VNP_IPN_URL=http://your-domain.com/api/payment/vnpay/ipn
       - FRONTEND_URL=http://localhost
     volumes:
       - ./backend/src:/app/src
@@ -34,6 +27,7 @@
     command: npm run dev
     depends_on:
       - mongodb
+
 
   web:
     build: ./frontend
