--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,57 +1,43 @@
-name: CI-CD Deploy NodeJS + Docker
+name: CI/CD Build & Push Docker
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main"]        # Chạy khi push code lên main
+  workflow_dispatch:          # Cho phép bấm chạy thủ công
 
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
-      
-      - name: Build Docker image
-        run: docker build -t ecom-nodejs .
+        uses: actions/checkout@v4
 
-      - name: Save Docker image
-        run: docker save ecom-nodejs | gzip > ecom.tar.gz
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Login Docker Hub
+        uses: docker/login-action@v2
         with:
-          name: ecom-app
-          path: ecom.tar.gz
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  deploy:
-    needs: build
+      - name: Build Backend Docker Image
+        run: cd backend && docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest .
+
+      - name: Push Backend image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest
+
+  build_frontend:
     runs-on: ubuntu-latest
-    
     steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: ecom-app
-      
-      - name: Copy to server via SSH
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_KEY }}
-          source: "ecom.tar.gz"
-          target: "/var/www/app"
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.6
+      - name: Login Docker Hub
+        uses: docker/login-action@v2
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_KEY }}
-          script: |
-            cd /var/www/app
-            gunzip -f ecom.tar.gz
-            docker load < ecom.tar
-            docker stop app || true
-            docker rm app || true
-            docker run -d -p 4000:4000 --name app ecom-nodejs
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Frontend Docker Image
+        run: cd frontend && docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest .
+
+      - name: Push Frontend image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest
