--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,30 @@ name: CI/CD Build & Push Docker
 
 on:
   push:
-    branches: ["main"]        # Chạy khi push code lên main
-  workflow_dispatch:          # Cho phép bấm chạy thủ công
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
-  build_backend:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
 
       - name: Login Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Backend Docker Image
-        run: cd backend && docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest .
+      - name: Backend build & push
+        run: |
+          cd backend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest
 
-      - name: Push Backend image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest
-
-  build_frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Login Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Frontend Docker Image
-        run: cd frontend && docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest .
-
-      - name: Push Frontend image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest
+      - name: Frontend build & push
+        run: |
+          cd ../frontend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest
