--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,14 @@
-name: CI/CD Build & Push Docker
+name: CI/CD Build & Push Docker Images
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    branches: ["main"]          # Tự động chạy khi push lên main
+  workflow_dispatch:            # Có thể bấm chạy thủ công
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -18,14 +19,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Backend build & push
+      # --- BACKEND ---
+      - name: Build Backend Image
         run: |
           cd backend
           docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest
 
-      - name: Frontend build & push
+      - name: Push Backend Image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-backend:latest
+
+      # --- FRONTEND ---
+      - name: Build Frontend Image
         run: |
-          cd ../frontend
+          cd frontend
           docker build -t ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest
+
+      - name: Push Frontend Image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecom-frontend:latest
