--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "create-admin": "node create-admin.js"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
+    "@elastic/elasticsearch": "^9.2.0",
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -29,7 +29,6 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^7.0.10",
     "qs": "^6.14.0",
-    "react-draggable": "^4.5.0",
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
